@@ -4,6 +4,7 @@ import static org.hamcrest.MatcherAssert.assertThat;
 import static org.hamcrest.core.Is.is;
 import static org.mockito.Mockito.when;
 
+import java.net.URI;
 import java.net.URL;
 import java.util.Arrays;
 
@@ -71,9 +72,9 @@ public class RestServiceRule2Test {
 		
 		when(serviceMock.method1()).thenReturn(entity);
 		
-		URL u1 = new URL(baseUrl + "/rest/method1");
+		URI u1 = new URI(baseUrl + "/rest/method1");
 		
-		ResponseEntity<String> responseEntity = restTemplate.getForEntity(u1.toURI(), String.class);
+		ResponseEntity<String> responseEntity = restTemplate.getForEntity(u1, String.class);
 		
 		assertThat(responseEntity.getBody(), is(message));
 	}
